--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
 <body>
     <h1>Discover hidden places in the world around you</h1>
     <h4>Download Excursion (Coming soon!)</h4>
+    <div>
+        <video src="/resources/videos/excursion.mp4" loop autoplay></video>
+    </div>
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you</h3>
+    <div>
+        <img src="/resources/images/camp.jpg">
+    </div>
+    <div>
+        <img class="iphone" src="/resources/images/phone.png">
+    </div>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <h4>Download Excursion (Coming soon!)</h4>
+    <h3 id="right">&#xA9; Excursion</h3>
 </body>
 </html>
